--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-target/
+# Project exclude paths
+*target/
+
+### IntelliJ IDEA ###
+.idea
+*.iml
+
+# Maven
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -7,5 +14,3 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
