--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>payment-impl</artifactId>
 
+    <dependencies>
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.version}</version>
+    </dependency>
+    </dependencies>
 
 </project>
