--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -17,6 +17,11 @@
         <artifactId>lombok</artifactId>
         <version>${lombok.version}</version>
     </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback-classic.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
