--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>${lombock.version}</version>
+                <version>${lombok.version}</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
