--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>payment-impl</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
