--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
 
         <lombok.version>1.18.12</lombok.version>
         <logback-classic.version>1.2.3</logback-classic.version>
-        <janino.version>3.0.6</janino.version>
     </properties>
 
     <dependencyManagement>
@@ -33,6 +32,7 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
@@ -66,5 +66,4 @@
             </plugin>
         </plugins>
     </build>
-
-</project>
+</project> 
