Add hibernate into project (#26)

--- a/payment-impl/src/main/resources/hibernate.properties
+++ b/payment-impl/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 hibernate.connection.driver_class = org.postgresql.Driver
-hibernate.connection.url = jdbc:postgresql://${liquibase.host}:${liquibase.port}/${liquibase.db}?currentSchema=${liquibase.schema}
+hibernate.connection.url = jdbc:postgresql://localhost:5432/courses?currentSchema=payment
 hibernate.connection.username = pay
 hibernate.connection.password = pay
