--- a/payment-db/pom.xml
+++ b/payment-db/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>payment-db</artifactId>
 
+    <properties>
 
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>${liquibase.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
