--- a/payment-db/pom.xml
+++ b/payment-db/pom.xml
@@ -12,7 +12,13 @@
     <artifactId>payment-db</artifactId>
 
     <properties>
-
+        <liquibase.host>localhost</liquibase.host>
+        <liquibase.port>5432</liquibase.port>
+        <liquibase.db></liquibase.db>
+        <liquibase.schema>payment</liquibase.schema>
+        <liquibase.user>pay</liquibase.user>
+        <liquibase.password>pay</liquibase.password>
+        <liquibase.changelogfile>src/main/resources/db/db-payment-changelog.xml</liquibase.changelogfile>
     </properties>
 
     <build>
@@ -21,6 +27,15 @@
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>${liquibase.version}</version>
+                <configuration>
+                    <outputFileEncoding>UTF-8</outputFileEncoding>
+                    <driver>org.postgresql.Driver</driver>
+                    <url>url = jdbc:postgresql://${liquibase.host}:${liquibase.port}/${liquibase.db}?currentSchema=${liquibase.schema}</url>
+                    <username>${liquibase.user}</username>
+                    <password>${liquibase.password}</password>
+                    <changeLogFile>${liquibase.changelogfile}</changeLogFile>
+                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                </configuration>
             </plugin>
         </plugins>
     </build>
