--- a/payment-db/pom.xml
+++ b/payment-db/pom.xml
@@ -21,6 +21,17 @@
         <liquibase.changelogfile>src/main/resources/db/db-payment-changelog.xml</liquibase.changelogfile>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
