Add dependency into pom.xml and payment-impl/pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,32 @@
     <properties>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <lombok.version>1.18.12</lombok.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <janino.version>3.0.6</janino.version>
+        <hibernate-core.version>5.4.14.Final</hibernate-core.version>
+        <hibernate-entitymanager.version>5.4.14.Final</hibernate-entitymanager.version>
+        <postgresql.version>42.2.4</postgresql.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!--JPA/Database-->
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>${hibernate-entitymanager.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
+            </dependency>
             <!-- Utils -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
