Implemented Accept and AcceptStatus entities. Created CRUD repository for Accept entity.

--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>janino</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.epam.rd</groupId>
+            <artifactId>payment-domain</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
