Add client and payment entities and their repositories into project (… (#41)
* Add client and payment entities and their repositories into project (#32)

Add client and payment entities. Add client and payment repositories. Update maven dependencies. Update payment units.

* Add client and payment entities and their repositories into project (#32)

Add client and payment entities. Add client and payment repositories. Update maven dependencies. Update payment units.

* Add client and payment entities and their repositories into project (#32)

Add client and payment entities. Add client and payment repositories. Update maven dependencies. Update payment units.

* Add client and payment entities and their repositories into project (#32)

Add client and payment entities. Add client and payment repositories. Update maven dependencies. Update payment units.

Co-authored-by: LopatinDmitrii <l.dmi3.v@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <lombok.version>1.18.12</lombok.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <janino.version>3.0.6</janino.version>
+
+        <payment-domain.version>0.0.1</payment-domain.version>
     </properties>
 
     <dependencyManagement>
@@ -77,6 +79,13 @@
                 <artifactId>janino</artifactId>
                 <version>${janino.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.epam.rd</groupId>
+                <artifactId>payment-domain</artifactId>
+                <version>${payment-domain.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
