Add entity Account, AccountStatus (#45)
Add crud repository for entity Account

Co-authored-by: misa130 <misasevervv@mail.ru>
Co-authored-by: Kopnu <Dzivv0@yandex.ru>

--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -44,6 +44,10 @@
             <groupId>org.codehaus.janino</groupId>
             <artifactId>janino</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.epam.rd</groupId>
+            <artifactId>payment-domain</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.epam.rd</groupId>
