--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <payment-domain.version>0.0.1</payment-domain.version>
+
         <hibernate.version>5.4.14.Final</hibernate.version>
         <postgresql.version>42.2.12</postgresql.version>
         <liquibase.version>3.8.9</liquibase.version>
@@ -28,8 +30,10 @@
         <lombok.version>1.18.12</lombok.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <janino.version>3.0.6</janino.version>
+        <commons-codec.version>1.9</commons-codec.version>
 
-        <payment-domain.version>0.0.1</payment-domain.version>
+        <mockito-testng.version>0.1.1</mockito-testng.version>
+        <testng.version>7.0.0-beta1</testng.version>
     </properties>
 
     <dependencyManagement>
@@ -79,11 +83,24 @@
                 <artifactId>janino</artifactId>
                 <version>${janino.version}</version>
             </dependency>
-
             <dependency>
-                <groupId>com.epam.rd</groupId>
-                <artifactId>payment-domain</artifactId>
-                <version>${payment-domain.version}</version>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.version}</version>
+            </dependency>
+
+            <!-- Tests -->
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>${testng.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-testng</artifactId>
+                <version>${mockito-testng.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
