Add test coverage plugin

--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         java: [ 11 ]
-    name: Java ${{ matrix.java }} build test
+    name: Java ${{ matrix.java }} test
     steps:
       - uses: actions/checkout@v1
       - name: Test
@@ -34,3 +34,16 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
       - run: mvn -f pom.xml test
+  test-coverage:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ 11 ]
+    name: Java ${{ matrix.java }} test coverage
+    steps:
+      - uses: actions/checkout@v1
+      - name: Verify
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
+      - run: mvn -f pom.xml verify
