--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -46,4 +46,4 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
-      - run: mvn -f pom.xml verify -Ptest-coverage
+      - run: mvn -f pom.xml verify -Ptest-coverage -fae
