--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -45,13 +45,18 @@
             <artifactId>janino</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.epam.rd</groupId>
-            <artifactId>payment-domain</artifactId>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
         </dependency>
 
+        <!-- Tests -->
         <dependency>
-            <groupId>com.epam.rd</groupId>
-            <artifactId>payment-domain</artifactId>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-testng</artifactId>
         </dependency>
 
     </dependencies>
