Fixed comments(part) and fixed bag?

--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -45,8 +45,8 @@
             <artifactId>janino</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
+            <groupId>com.epam.rd</groupId>
+            <artifactId>payment-domain</artifactId>
         </dependency>
 
         <!-- Tests -->
