--- a/pom.xml
+++ b/pom.xml
@@ -88,13 +88,13 @@
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
                 <version>${testng.version}</version>
-                <scope>test</scope>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-testng</artifactId>
                 <version>${mockito-testng.version}</version>
-                <scope>test</scope>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
