--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -44,14 +44,14 @@
             <groupId>org.codehaus.janino</groupId>
             <artifactId>janino</artifactId>
         </dependency>
+        <!-- Tests -->
         <dependency>
-            <groupId>com.epam.rd</groupId>
-            <artifactId>payment-domain</artifactId>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>com.epam.rd</groupId>
-            <artifactId>payment-domain</artifactId>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-testng</artifactId>
         </dependency>
 
     </dependencies>
