--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
         <logback-classic.version>1.2.3</logback-classic.version>
         <janino.version>3.0.6</janino.version>
 
+        <mockito-testng.version>0.1.1</mockito-testng.version>
+        <testng.version>7.0.0-beta1</testng.version>
+
         <payment-domain.version>0.0.1</payment-domain.version>
     </properties>
 
@@ -81,10 +84,18 @@
                 <version>${janino.version}</version>
             </dependency>
 
+            <!-- Tests -->
             <dependency>
-                <groupId>com.epam.rd</groupId>
-                <artifactId>payment-domain</artifactId>
-                <version>${payment-domain.version}</version>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>${testng.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-testng</artifactId>
+                <version>${mockito-testng.version}</version>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
